k8s/app_dart/service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: app-flutter-service
spec:
  type: NodePort
  selector:
    app: app-flutter
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
