k8s/app_dart/ingress.k8.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watch-ingress
metadata:
  name: watch-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: paranid5.app_flutter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-flutter-service
            port:
              number: 8081
